# C_pico_skelett

./: .gitignore  CMakeLists.txt  README.md  debugstream  rebuild  reflash  regenerate
pico-displayDrivs/: CMakeLists.txt
pico-displayDrivs/gfx/: gfx.c  gfx.h
pico-displayDrivs/st7735/: st7735.h
source/: config.c  config.h  debug.c  debug.h  globals.c  globals.h  input.c  input.h  memory.c  memory.h  module1.c  module1.h  module2.c  module2.h  skelett.c  timer.c  timer.h
source/lib-st7735/include/: hw.h
source/lib-st7735/src/: hw.c
source/playground/: mutex.c  mutex.h
